Fixed shifting subtrees at a minimum based on depth of their contour

--- a/src/index.css
+++ b/src/index.css
@@ -42,5 +42,4 @@ a {
 }
 .tree__word {
   margin:2em;
-  opacity:0.5;
 }
